--- a/client/styles/less/data-quota/list.less
+++ b/client/styles/less/data-quota/list.less
@@ -11,4 +11,12 @@
       margin-left: 6px;
     }
   }
+  .table-patch {
+    td, th{
+      word-break: keep-all;
+      word-wrap: normal;
+      text-overflow: ellipsis;
+      table-layout: fixed;
+    }
+  }
 }
